// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change to day 1`] = `
<div>
  <div
    class="bg day"
  >
    <div>
      <img
        alt="day"
        class="planet sun show"
        src="https://img.icons8.com/cotton/256/000000/sun--v1.png"
      />
    </div>
    <div>
      <img
        alt="night"
        class="planet moon hide"
        src="https://img.icons8.com/cotton/256/000000/moon-satellite.png"
      />
    </div>
  </div>
  <div
    class="buttonArea"
  >
    <button
      class="button btn btn-primary"
    >
      切換成 
      晚上
    </button>
  </div>
</div>
`;

exports[`should change to night 1`] = `
<div>
  <div
    class="bg night"
  >
    <div>
      <img
        alt="day"
        class="planet sun hide"
        src="https://img.icons8.com/cotton/256/000000/sun--v1.png"
      />
    </div>
    <div>
      <img
        alt="night"
        class="planet moon show"
        src="https://img.icons8.com/cotton/256/000000/moon-satellite.png"
      />
    </div>
  </div>
  <div
    class="buttonArea"
  >
    <button
      class="button btn btn-primary"
    >
      切換成 
      白天
    </button>
  </div>
</div>
`;
